# ppt-to-images

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ppt_to_images/: __init__.py  __main__.py  cli.py  converter.py  utils.py
