[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-to-images"
version = "0.1.0"
description = "Convert PPT/PPTX/PDF files to image sequences"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HQIT"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business :: Office Suites",
]
keywords = ["ppt", "pptx", "pdf", "image", "conversion", "slides", "presentation"]
dependencies = [
    "pdf2image>=1.16.0",
    "Pillow>=9.0.0",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/HQIT/ppt-to-images"
Repository = "https://github.com/HQIT/ppt-to-images"
Issues = "https://github.com/HQIT/ppt-to-images/issues"

[project.scripts]
ppt-to-images = "ppt_to_images.cli:main"

[tool.setuptools.packages.find]
where = ["."]

