[metadata]
name = ppt-to-images
version = 0.1.0
description = Convert PPT/PPTX/PDF files to image sequences
author = HQIT
url = https://github.com/HQIT/ppt-to-images
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pdf2image>=1.16.0
    Pillow>=9.0.0
    python-pptx>=0.6.21

[options.entry_points]
console_scripts =
    ppt-to-images = ppt_to_images.cli:main

